[package]
name = "unionfind"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "A Rust implementation of the Union-Find data structure"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.9.3"
serde = { version="1.0.163", optional=true }

