[package]
name = "hash-unionfind"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"
description = "A Rust implementation of the Union-Find data structure"
homepage = "https://github.com/eytans/rs-unionfind"
repository = "https://github.com/eytans/rs-unionfind"
documentation = "https://docs.rs/unionfind"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.9.3"
serde = { version="1.0.163", optional=true }

